frontend/src/app/inventory/15Tablecomp/InventoryUnit.css
/**************************************************************
 *
 *                     InventoryUnit.css
 *
 *        Authors: Elias Swartz & Elisa Yu 
 *           Date: 01/30/2025
 *
 *     Summary: CSS styling for the inventory units. 
 * 
 **************************************************************/
@import url("../../globals.css");

.unit {
    display: flex;
    width: 100%;
    min-height: 5vh;
    justify-content: space-around;
    align-items: center;
    color: #000000;
    font-size: 1rem;
    flex-shrink: 0;
    outline: 1px solid #9B525F;
    background: #FFF;
}

.left-section {
    display: flex;
    align-items: center;
    gap: 1vh;
    margin-left: 1vh;
    width:6.5vw;
    justify-content: space-around;
}

.checkbox-input {
    display: flex;
    width: 1rem;
    height: 1rem;
    padding: 5px;
    margin: 10px;
    align-items: center;
    gap: 10px;
    flex-shrink: 0;
    border-radius: 2px;
    border: 1px solid #915360;
    box-shadow: 0px 0.5px 2px 0px rgba(0, 0, 0, 0.25);
    appearance: none;
    cursor: pointer;
    position: relative;
}

/* Checkbox checked style */
.checkbox-input:checked {
    border-color: #915360;
    background-color: #803946;
    box-shadow: 0px 0.402px 1.608px 0px rgba(0, 0, 0, 0.25);
    position: relative;
}

.checkbox-input:checked::after {
    position: absolute;
    content: "";
    width: 5px;
    height: 9px;
    border: solid white;
    border-width: 0 3px 3px 0;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -60%) rotate(45deg);
}

.picture .image-container {
    width: 4vh; 
    height: 4vh; 
    border-radius: 50%;
    overflow: hidden; 
    display: flex;
    align-items: center;
    justify-content: center;
    background: lightgray 50% / cover no-repeat;
    position: relative;
}

.picture img {
    width: 100%;
    height: 100%;
    object-fit: cover; /* Scales the image to cover the container without distortion */
}

.center-section {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 50vw;
    z-index: 100;
    font-size: 0.85rem;
}

.circle1 {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    display: inline-block;
}

.Borrowed {
    background-color: var(--borrowed);
}

.Available {
    background-color: var(--available);
}

.Overdue {
    background-color: var(--overdue);
}

.Missing {
    background-color: var(--missing);
}

.circle2 {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    display: inline-block;
}

.Great {
    background-color: var(--great);
}

.Good {
    background-color: var(--good);
}

.repair{
    background-color: var(--repairs);
}

.washing {
    background-color: var(--washing);
}

.cleaning {
    background-color: var(--dry_cleaning);
}

.Not {
    background-color: grey;
}

.id, .name, .status, .drop-down, .condition{
    flex: 1 1; 
    text-align: left;
}

.id {
    padding-left: 4.5vw;
}

.name {
    padding-right: 0.75vw;
}

.status {
    display: flex;
    align-items: center;
    gap: 1.5vh;
    justify-content: center;
    padding-right: 3.5vw;
}

.condition {
    display: flex;
    align-items: center;
    gap: 1.5vh;
    justify-content: center;
    text-wrap: nowrap;
    justify-content: flex-start;
    padding-right: 0.75vw;
}

.drop-down {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    width:5vw;
    color: #000000;
}

.drop-downBtn {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px;
    margin: 1vh;
    width: 5vw;
    height: 4vh;
    border: none;
    cursor: pointer;
    background: none;
    box-shadow: none;
    color: #000000;
}

.drop-downBtn:hover {
    background: none;
    box-shadow: none;
    appearance: none;
}

.tags {
    padding-left: 4vw;
    display: flex;
    align-items: center;
    overflow-x: auto;  
    overflow-y: hidden;
    justify-content: left;
    height: 5vh;
    width: 30vw; 
    gap: 10px;
}

.gender, .season, .size, .time {
    display: flex;
    width: vw;
    height: 2vh;
    padding: 2px 19px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    border-radius: 2px;
    border: 1px solid #8184A6;
    background: #FFF;
    box-shadow: 0px 0.5px 2px 0px rgba(0, 0, 0, 0.25);
    font-size: 0.7rem;
}

.tag {
    font-size: 1.5vh; 
}

